Redo extracss application. Now inspects available style properties to decide which file to apply. Probably fixes userscripts not having extracss.

--- a/data/extracss-moz.css
+++ b/data/extracss-moz.css
@@ -1,5 +1,7 @@
 /*
- * ExtraCSS flags file for Firefox. Stolen from:
+ * ExtraCSS flags file for older Firefox versions, which require -moz.
+ *
+ * Originally stolen from:
  *
  *    http://userstyles.org/styles/67659/reddit-extracss-emoticon-flags-for-firefox
  *
