--- a/data/extracss-webkit.css
+++ b/data/extracss-webkit.css
@@ -1,5 +1,7 @@
 /*
- * ExtraCSS flags file for Chrome. Stolen from:
+ * ExtraCSS flags file for WebKit (Chrome, Safari), which require -webkit.
+ *
+ * Originally stolen from:
  *
  *    http://userstyles.org/styles/67657/reddit-extracss-emoticon-flags-for-chrome
  *
