--- a/source-css/tacoshy.css
+++ b/source-css/tacoshy.css
@@ -237,19 +237,6 @@ a[href|="/tacoclop"]
     margin-right: 3px
     }
 
-a[href|="/tacoclop"]
- {
-    width: 360px;
-    height: 360px;
-    background-image: url(%%tacoclop%%);
-    background-position: 0px 0px;
-    display: block;
-    clear: none;
-    float: left;
-    margin-left: 3px;
-    margin-right: 3px
-    }
-
 a[href|="/letthetacosflow"]
  {
     width: 512px;
@@ -389,6 +376,16 @@ a[href|="/tacosmug"] {
     height: 414px;
     background-image: url(%%tacosmug%%) !important
     }
+a[href|="/conkyfun"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 300px;
+    height: 159px;
+    background-image: url(%%Conkybear%%) !important
+    }
+
 /* ----------- Name Change ---------------- */
 
 
