--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -2062,16 +2062,16 @@ Random Plounge Buggery
 
 /* FOOTER */
 .footer-parent {
-    height: 800px;
-    padding-bottom: 40px;
+    height: 382px;
+    padding-bottom: 0px;
     clear: both;
     text-align: center;
     width: 100%;
-    background-image: url(%%sbstarepeek-magritte%%);
+    background-image: url(%%BanksyBelle%%);
     /*background-position: bottom center;*/
     background-repeat: no-repeat;
     margin-bottom: -0px;
-    background-position: 50% 155px;/*Path's OCD was here.*/
+    background-position: 50% 55px;/*Path's OCD was here. Fuck yo OCD, ~Veller*/
     }
 html:lang(nv) .side p a[href="http://reddit.com/r/MLPLounge/"]
 {
@@ -2100,9 +2100,9 @@ h3 {
 
 .side a[href="http://www.reddit.com/r/MLPLounge/new/"]{
    display: block;
-   height: 84px;
-   width: 67px;
-   background: url(%%fillycloudchaser%%);
+   height: 87px;
+   width: 80px;
+   background: url(%%fillyflitter%%);
    position: fixed; 
    top: 260px;
    right: -10px;
