--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -1,5 +1,3 @@
-a[href|="/brd"] { display: block; clear: none; float: left; background-image: url(%%bird%%); width: 120px; height: 120px; background-position: -0px -0px }
-
 /* Changes background  */
 body:first-of-type, body.res-nightmode:first-of-type {
    
@@ -450,7 +448,7 @@ a[href|='/sbgrin'] {width:74px; height:77px; background-position: -91px -2330px}
 a[href|='/shyduck'] {width:91px; height:102px; background-position: -0px -2330px}
 a[href|='/sockcord'] {width:97px; height:152px; background-position: -0px -1547px}
 a[href|='/twipoke'] {width:101px; height:102px; background-position: -152px -1091px}
-a[href|='/twiread'] {width:256px; height:108px; background-position: -0px -2120px}
+a[href|='/twiread'] {width:253px; height:108px; background-position: -0px -2120px}
 a[href|='/wuna'] {width:146px; height:202px; background-position: -0px -433px}
 
 
@@ -462,17 +460,17 @@ a[href|='/cowpony'], a[href|='/creamsicle'], a[href|='/diswut'], a[href|='/dod']
     }
 
 a[href|='/cowpony'] {width:147px; height:177px; background-position: -0px -2022px}
-a[href|='/creamsicle'] {width:127px; height:163px; background-position: -0px -2784px}
+a[href|='/creamsicle'] {width:127px; height:163px; background-position: -0px -2775px}
 a[href|='/diswut'] {width:174px; height:202px; background-position: -0px -960px}
 a[href|='/dod'] {width:110px; height:127px; background-position: -141px -2478px}
 a[href|='/dresscord'], a[href|='/ishygdadt'] {width:251px; height:202px; background-position: -0px -0px}
 a[href|='/dresscord'] {width:158px; height:252px; background-position: -0px -1466px}
 a[href|='/eagleeye'], a[href|='/hawkeye'] {width:160px; height:152px; background-position: -0px -1314px}
-a[href|='/flutterpout'] {width:130px; height:127px; background-position: -0px -2657px}
+a[href|='/flutterpout'] {width:130px; height:127px; background-position: -0px -2648px}
 a[href|='/frightenpie'] {width:113px; height:152px; background-position: -130px -2757px}
 a[href|='/inurbutt'] {width:157px; height:177px; background-position: -0px -1718px}
 a[href|='/lunadark'] {width:183px; height:202px; background-position: -0px -606px}
-a[href|='/macgasp'] {width:101px; height:152px; background-position: -147px -2174px}
+a[href|='/macgasp'] {width:101px; height:152px; background-position: -147px -2173px}
 a[href|='/ppfof'] {width:176px; height:152px; background-position: -0px -808px}
 a[href|='/ppsly'] {width:111px; height:152px; background-position: -140px -2605px}
 a[href|='/psychiatwi'], a[href|='/twithis'] {width:210px; height:202px; background-position: -0px -202px}
@@ -480,13 +478,13 @@ a[href|='/queencheer'] {width:155px; height:127px; background-position: -0px -18
 a[href|='/rarhorror'] {width:162px; height:152px; background-position: -0px -1162px}
 a[href|='/rosefof'] {width:144px; height:152px; background-position: -0px -2199px}
 a[href|='/sbshy'] {width:85px; height:127px; background-position: -162px -1162px}
-a[href|='/scootscared'] {width:140px; height:129px; background-position: -0px -2528px}
+a[href|='/scootscared'] {width:140px; height:129px; background-position: -0px -2519px}
 a[href|='/sexymac'] {width:200px; height:202px; background-position: -0px -404px}
 a[href|='/soarinshock'] {width:110px; height:127px; background-position: -141px -2351px}
-a[href|='/twicake'] {width:126px; height:127px; background-position: -0px -2947px}
-a[href|='/twiglare'] {width:124px; height:102px; background-position: -127px -2909px}
-a[href|='/twiteehee'] {width:104px; height:152px; background-position: -147px -2022px}
-a[href|='/twiteeth'] {width:141px; height:177px; background-position: -0px -2351px}
+a[href|='/twicake'] {width:124px; height:125px; background-position: -127px -2909px}
+a[href|='/twiglare'] {width:124px; height:101px; background-position: -0px -2938px}
+a[href|='/twiteehee'] {width:103px; height:151px; background-position: -147px -2022px}
+a[href|='/twiteeth'] {width:141px; height:168px; background-position: -0px -2351px}
 
 
 
@@ -809,7 +807,7 @@ a.author[href$="HtotheGRIFF"]:before {content:"faggot"}
 a.author[href$="viper9172"]:before {content:"Sidelong"}
 a.author[href$="Lazeraze"]:before {content:"Snowlily"}
 a.author[href$="31eipekili"]:before {content:"I like pie 13"}
-a.author[href$="derram_2"]:before /*{content:"derramina Diane Pie"}*/{content:"ArchangelleCupcakes"}
+a.author[href$="derram_2"]:before {content:"derramina Diane Pie"}
 a.author[href$="Chiv_Cortland"]:before {content:"Chivvypoop"}
 a.author[href$="442B8AEF9"]:before {content:"Socialery"}
 a.author[href$="anonpon3"]:before {content:"Artful" }
@@ -828,13 +826,13 @@ a.author[href$=Greenie_Lye]:before { content:"Greenie_Lye (Green Derram)" }
 a.author[href$=Chinch335]:before,a.author[href$=IllusionOf_Integrity]:before { content:"Chillusion" }
 a.author[href$=trypsonite]:before { content:"Who"; color:blue }
 a.author[href$=RetardVomitPussyCunt]:before { content:"RainbowViolinPancakesCider" }
-a.author[href$=andysonic2]:before /*{ content:"THE DUDEST DUDE DUUUUUUUUDE!" } */{content:"Archangelle1"}
+a.author[href$=andysonic2]:before {content:"andysonic1"}
 a.author[href$="10z20Luka"]:before { content:"Titty-slickers, God of Thunder and Lord of the Dance" }
 a.author[href$=PinkiePie2012]:before { content:"Empress Pie" }
 a.author[href$=DarkSideOfTheSun]:before { content:"DickSideOfTheSun" }
 a.author[href$=SkiidrowDash]:before { content:"Ski iDrow Toity" }
 a.author[href$=Backupusername]:before { content:"Cocksucker Shittytits" }
-a.author[href$=Speedingturtle]:before { content:"ArchangelleDovahkiin" }
+a.author[href$=Speedingturtle]:before { content:"Slowyslowyslowslowturtle" }
 a.author[href$=supercrunchy]:before { content:"Crumcju" }
 a.author[href$=Taiokoshinketsu]:before { content:"Tia" }
 a.author[href$=SolarLuna96]:before { content:"Fluttershy's Wrath" }
@@ -842,9 +840,9 @@ a.author[href$=Generic_Builder]:before { content:"Genewic Bwuilda" }
 a.author[href$=volcano_bakemeats]:before { content:"Madam Le Bake" }
 a.author[href$=DaylightDarkle]:before { content:"Twilight Sparkle" }
 a.author[href$=Chillusion]:before { content:"Cchhiilllluussiioonn" }
-a.author[href$=Esplin]:before /*{ content:"EspEspEsp" }*/ {content:"ArchangelleHorsecock"}
+a.author[href$=Esplin]:before {content:"Power User"}
 a.author[href$=DarqWolff]:before { content:"[](/DarqWolff)" }
-a.author[href$=cheesemoo]:before { content:"Archangellecheesemoo" }
+a.author[href$=cheesemoo]:before { content:"Cheesemeow" }
 a.author[href$=scriptea]:before { content:"scriptease" }
 a.author[href$=QdwachMD]:before { content:"Queen QdwacgMD II " }
 a.author[href$=SirCinnamon]:before { content:"KingCinnamon" }
@@ -856,8 +854,8 @@ a.author[href$=XelNaga]:before { content:"Twi`Naga" }
 a.author[href$=Catharsis25]:before { content:"Catharsis" }
 a.author[href$=tehz]:before,a.author[href$=tailcalled]:before { content:"Tail Call" }
 a.author[href$=Ruuch]:before { content:"Escort Sluthooves" }
-a.author[href$=herabek]:before /*{ content:"WHAT A DUDE!" }*/{content:"ArchangelleHerb"}
-a.author[href$=OneOfTheseDaysLuna]:before { content:"Oodles of Dude'els" }
+a.author[href$=herabek]:before {content:"Herb"}
+a.author[href$=OneOfTheseDaysLuna]:before { content:"OneOfThoseOneOfTheseDaysLuna" }
 a.author[href$=Zovistograt]:before { content:"[](/ww20 ''Needy Bitch'')" }
 a.author[href$=ZZW30]:before { content:"CaptChuckles" }
 
@@ -880,6 +878,7 @@ height:30px
 }
 
 /* Adding after-text to somebody's name? Add them here. */
+a.author[href$=HtotheGRIFF]:after,
 a.author[href$=scriptea]:after ,
 a.author[href$="ClopIsDisgusting"]:after,
 a.author[href$=Myrandall]:after,
@@ -934,7 +933,8 @@ letter-spacing:normal;
 }
 
 /* After-name text goes here. */
-a.author[href$=scriptea]:after  { content:" (Too main pone for background pone status)" }
+a.author[href$=HtotheGRIFF]:after  { content:" (Is very mad)"}
+a.author[href$=scriptea]:after { content:"Too main pone for background pone status)" }
 a.author[href$="ClopIsDisgusting"]:after  { content:" (Exists solely to shit on other people's fun)" }
 a.author[href$=Myrandall]:after { content:" (Will applaud anything that doesn't resemble a plastic cock)" }
 a.author[href$=Chinch335]:after { content:" (brings the magic)" }
