--- a/source-css/mylittlemotorhead.css
+++ b/source-css/mylittlemotorhead.css
@@ -2,9 +2,13 @@
 
 #header-bottom-left { background-image: url(%%Atom%%); background-repeat: no-repeat; background-position: 55% 20%;  }
 
+
+/* Why is it so transperent! */
+/*
 body div.content{ background-color: white; opacity: 0.84; max-width: 100%; height: 100%; z-index: 1 !important; overflow: hidden; }
 
 .footer-parent { background-color: white; opacity: 0.84;}
+*/
 
 /*Background Image*/
 
