--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -2,7 +2,7 @@
 
 div.side {
     padding: 435px 0px 0px 0px;
-    background-color: transparent;
+/*    background-color: transparent; */
     background-image: url(%%side%%) !important;
     background-position: 70px 5px !important;
     margin: 0px;
@@ -17,7 +17,7 @@ div.side:before {
 
 /*------------------------  Changes background -------------------------------*/
 
-body:first-of-type, body.res-nightmode:first-of-type,.side,.flairtoggle,.submit .spacer,.create .spacer,.icon-menu a,.nub { background-color: transparent !important; }
+body:first-of-type, body.res-nightmode:first-of-type,.side,.flairtoggle,.submit .spacer,.create .spacer,.icon-menu a,.nub { background-color: white } 
 .side a[href="/bg-pony"] { 
     position: fixed;
     z-index:-1;
