Stylesheet/emote/tag updates 2012-10-27

--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -200,7 +200,7 @@ a[href$="/spoiler"]:hover {
 
 /*Background*/
 body {
-   background: url(%%background%%)  no-repeat fixed center center;
+   background: url(%%backg%%) no-repeat fixed center center;
    margin-top: 5px;
    }
 
