--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -192,7 +192,7 @@ a.author[href$=Conky_]:after {
 /********************************/
 
 /************Non-MLP*************/
-a[href|="/smothered"], a[href|="/coconutmonkey"], a[href|="/pan10"], a[href|="/panwaffbattle"], a[href|="/hellocake"], a[href|="/pfreeman"], a[href|="/bugs"], a[href|="/torgo"], a[href|="/pancalcos"], a[href|="/pgaben"], a[href|="/doctordrunk"], a[href|="/notthebees"] {
+a[href|="/smothered"], a[href|="/coconutmonkey"], a[href|="/pan10"], a[href|="/panwaffbattle"], a[href|="/hellocake"], a[href|="/pfreeman"], a[href|="/bugs"], a[href|="/torgo"], a[href|="/pancalcos"], a[href|="/pgaben"], a[href|="/doctordrunk"], a[href|="/notthebees"], a[href|="/evanmacave"] {
     display: block;
     clear: none;
     float: left;
@@ -247,9 +247,13 @@ a[href|="/notthebees"] {
     background-position: -1814px -0px;
     width: 190px
     }
+a[href|="/evanmacave"] {
+    background-position: -2004px -0px;
+    width: 102px
+    }
 
 /************MLP-LRG*************/
-a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"] {
+a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"] {
     display: block;
     clear: none;
     float: left;
@@ -292,6 +296,10 @@ a[href|="/dintrot"] {
     background-position: -601px -0px;
     width: 141px
     }
+a[href|="/sprankton"] {
+    background-position: -742px -0px;
+    width: 87px
+    }
 a[href|="/sistersprankton"] {
     background-position: -742px -0px;
     width: 87px
@@ -299,6 +307,10 @@ a[href|="/sistersprankton"] {
 a[href|="/flutterhey"] {
     background-position: -829px -0px;
     width: 150px
+    }
+a[href|="/zealot"] {
+    background-position: -979px -0px;
+    width: 186px
     }
 a[href|="/sisterzealot"] {
     background-position: -979px -0px;
@@ -323,6 +335,10 @@ a[href|="/acer"] {
 a[href|="/darkman"] {
     background-position: -1757px -0px;
     width: 113px
+    }
+a[href|="/calcos"] {
+    background-position: -1870px -0px;
+    width: 116px
     }
 
 /***********MLP-XLRG*************/
