--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -185,7 +185,7 @@ display: none !important;
 
 /* Best sidebar Filly */
 
-.side a[href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=29526696"]{
+.side a[href="http://fav.me/d59bfi9"]{
    display: block;
    height: 120px;
    width: 120px;
