--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -2467,7 +2467,7 @@ a.thumbnail.self
 /*End spoilers in the title flair*/
 
 /*Pinkie Pie NPT Warnings*//*DO _NOT_ PUT ANY COMMENTS IN-BETWEEN THE NPTWARNING TAGS! Do not remove the tags either, they are used by modtool and the bot! The tags must be on their own line!*/
-/*{NPTWARNING}*/
+/*{NPTWARNING}
 .formtabs-content .infobar
 {
  margin-left:50px;
@@ -2495,7 +2495,7 @@ a.thumbnail.self
 {
  background:url(%%pinkiemessage%%) no-repeat;
 }
-/*{/NPTWARNING}*/
+{/NPTWARNING}*/
 
 /*Thumbnail Disabler*/
 .flairselector .linkflair-disable-thumb .linkflairlabel:before {content:"Disable Thumbnail";}
