Stylesheet/emote/tag updates 2012-10-28

--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -16,6 +16,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
 
  }
 
+
 /* User stuff (name color, karma color, est.) */
 #header-bottom-right {
     background-color: #CCCCCC
@@ -802,7 +803,7 @@ a.author[href$="Conky_"]:before {content:"Conky"}
 a.author[href$="PartOfAShoe"]:before {content:"Welt"}
 a.author[href$="shawa666"]:before {content:"Slowpoke666"}
 a.author[href$="Avebone"]:before {content:"Ambassador of Foodmanes"}
-a.author[href$="Qwerty439"]:before {content:"something else too"}
+a.author[href$="Qwerty439"]:before {content:"Asdfgh439"}
 a.author[href$="HtotheGRIFF"]:before {content:"faggot"}
 a.author[href$="viper9172"]:before {content:"Sidelong"}
 a.author[href$="Lazeraze"]:before {content:"Snowlily"}
@@ -1068,3 +1069,5 @@ body.res a.author[href$="Pathogen-David"], body.res a.author[href$="Phei"] { col
 
 /*Social wanted color*/
 .id-t2_894lr.id-t2_894lr{color:#b38 !important}
+
+
