--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -1,13 +1,11 @@
-/* LETS ORGANIZE THIS SHIT, I'M CONKY_ AND I LIKE SHIT ORGANIZED
+/* LETS ORGANIZE THIS SHIT, I'M CONKY AND I LIKE SHIT ORGANIZED
 
-lolyeah organization in foodmanes okay (this, minus sarcasm and shit bro)
+lolyeah organization in foodmanes okay
 
-CONKY ADDED SOME COOL SHIT, CHECK THAT SHIT OUT, TACOS, NIGHTMODE FIX BACKGROUND, LARGER EDITING AREAS, AND A HIDDEN BONUS HPPY SURPRISE OF FUN.
+CONKY ADDED SOME neat SHIT, CHECK THAT shit OUT, TACOS, NIGHTMODE FIX BACKGROUND, LARGER EDITING AREAS, AND a HIDDEN BONUS happy SURPRISE OF FUN.
 
 1. THE RULES: FUCKINGFOOD MANES MAN
-2. REFER TO ABOVE RULE
-3. DO NOT REFER TO THE BELOW RULE
-4. FOLLOW ALL OF THE ABOVE
+
 
  */
 
@@ -38,7 +36,7 @@ font-size: 8pt
 #siteTable .entry.dislikes:after {
 content:    url(%%yes%%);
 position: fixed;
-/* Used for centering (bottom center) */
+/* Used for centering (bottom Jcenter) */
 bottom: 0px;
 left: 50%;
 opacity: 0.05;
@@ -299,8 +297,8 @@ a[href|="/fillytacoshy"]
     clear: none;
     display: block;
     float: left;
-    height: 280px;
-    width: 355px;
+    height: 158px;
+    width: 200px;
 }
 
 /* Merry Christmas Bryvood. Sincerely, a couch */
@@ -703,7 +701,7 @@ a.author[href$="The_Jaxom"] {
     letter-spacing: -20px
     }
 a.author[href$="The_Jaxom"]:after {
-    content: "Jolly Jim";
+    content: "Jolly Jim the Seacow";
     font-size: 25px !important;
     visibility: visible !important;
     display: block;
@@ -930,8 +928,8 @@ a[href|="/applesaurus"]
     clear: none;
     display: block;
     float: left;
-    height: 220px;
-    width: 191px;
+    height: 200px;
+    width: 174px;
 }
 
 
@@ -976,12 +974,12 @@ a[href|="/greatrage"]
 a[href|="/macinmane"]
 {
 
- background-image: url(%%BIGMACINMAC%%) !important;
+ background-image: url(%%bigmacinmane%%) !important;
     clear: none;
     display: block;
     float: left;
-    height: 300px;
-    width: 314px;
+    height: 143px;
+    width: 150px;
 }
 
 a[href|="/colgatemunism"] , a[href|="/colgatemunist"]
@@ -999,12 +997,12 @@ a[href|="/colgatemunism"] , a[href|="/colgatemunist"]
 a[href|="/mechahitler"]
 {
 
- background-image: url(%%mechahitler-copy%%) !important;
+ background-image: url(%%mechahitler%%) !important;
     clear: none;
     display: block;
     float: left;
-    height: 450px;
-    width: 353px;
+    height: 300px;
+    width: 236px;
 
 }
 
