--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -616,14 +616,14 @@ a[href="/freakout"]:hover:after {
      
     .titlebox .usertext-body .md ol {
     width: auto;
-    background: url(%%sharp-dresser%%) no-repeat scroll 4px 4px #fff;
+    background: url(%%backburner%%) no-repeat scroll 2px 6px #fff;
     border: 2px solid #efefef;
     position: absolute;
     top: 20px;
     left: 165px;
     z-index: 50;
     margin: 20px 410px 0 0;
-    padding: 8px 5px 5px 50px;
+    padding: 8px 5px 5px 55px;
     list-style: none;
     display: block;
     white-space: normal;
