--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -255,14 +255,14 @@ background-image: url(%%bj-anim%%) !important;
 
 a[href|="/bjbubbles"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em3-v19%%) !important;
+background-image: url(%%foe-em3-v20%%) !important;
 }
 
 a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
@@ -273,6 +273,7 @@ a[href|="/lpinspire"]{ background-position: 0px -380px; width:88px; height:150px
 a[href|="/calamitywtf"]{ background-position: 0px -535px; width:78px; height:101px;}
 a[href|="/harmony"]{ background-position: 0px -640px; width:200px; height:225px;}
 a[href|="/bjsurprise"]{ background-position: 0px -870px; width: 119px; height: 76px;}
+a[href|="/lpfilly"]{ background-position: 0px -1255px; width: 125px; height: 150px;}
 
 
 a[href|="/advicebj"]
@@ -291,7 +292,7 @@ a[href|="/advicebj"]
     overflow: hidden !important;
     position: relative !important;
     text-transform: uppercase !important;
-    background-image: url(%%foe-em3-v19%%) !important;
+    background-image: url(%%foe-em3-v20%%) !important;
 }
 a[href|="/advicebj"]{ background-position: 0px -950px; width: 300px; height: 300px;}
 
