Stylesheet/emote/tag updates 2012-10-30

--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -185,7 +185,7 @@ display: none !important;
 
 /* Best sidebar Filly */
 
-.side a[href="http://fav.me/d5b8ijk"]{
+.side a[href="http://fav.me/d4h3ff5"]{
    display: block;
    height: 120px;
    width: 120px;
