--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -138,7 +138,7 @@ a[href="/s"]:hover::after, a[href="/sr"]:active::after, a[href="/st"]:active::af
 }
 
 
-a[href|="/lpwut"], a[href|="/lphurt"], a[href|="/homage"], a[href|="/bjstare"], a[href|="/bjclassy"], a[href|="/anteup"], a[href|="/queenwhiskey"], a[href|="/p21fun"], a[href|="/qnwhsk"],
+a[href|="/lpwut"], a[href|="/lphurt"], a[href|="/homage"], a[href|="/bjstare"], a[href|="/bjclassy"], a[href|="/anteup"], a[href|="/queenwhiskey"], a[href|="/p21fun"],
 a[href|="/p21notamused"], a[href|="/p21"], a[href|="/glory"], a[href|="/charity"], a[href|="/bjscared"], a[href|="/rampage"], a[href|="/lphappy"], a[href|="/omnomnom"], a[href|="/givemeec1101"], a[href|="/calamity"], a[href|="/pinkeyes"], a[href|="/lpwet"], a[href|="/mmdash"], a[href|="/psychoshy"], a[href|="/fightcalamity"], a[href|="/velvetremedy"], a[href|="/lparmed"], a[href|="/gawd"], a[href|="/steelhooves"], a[href|="/lpnotwant"]
 {
 display: block;
@@ -163,7 +163,7 @@ a[href|="/p21"]{ background-position: -210px -70px; }
 a[href|="/glory"]{ background-position: -280px -70px; }
 a[href|="/rampage"]{ background-position: -0px -210px; }
 
-a[href|="/queenwhiskey"], a[href|="/qnwhsk"]{ background-position: -70px -70px; width: 69px; height: 70px;}
+a[href|="/queenwhiskey"]{ background-position: -70px -70px; width: 69px; height: 70px;}
 a[href|="/bjscared"]{ background-position: -70px -140px; }
 a[href|="/p21notamused"], a[href|="/p21fun"]{ background-position: -139px -70px; width: 67px; height: 70px;}
 
@@ -255,14 +255,14 @@ background-image: url(%%bj-anim%%) !important;
 
 a[href|="/bjbubbles"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/cyberboop"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em3-v21%%) !important;
+background-image: url(%%foe-em3-v22%%) !important;
 }
 
 a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
@@ -274,7 +274,9 @@ a[href|="/calamitywtf"]{ background-position: 0px -535px; width:78px; height:101
 a[href|="/harmony"]{ background-position: 0px -640px; width:200px; height:225px;}
 a[href|="/bjsurprise"]{ background-position: 0px -870px; width: 119px; height: 76px;}
 a[href|="/lpfilly"]{ background-position: 0px -1255px; width: 125px; height: 150px;}
-a[href|="/cyberboop"]{ background-position: 0px -1410px; width: 200px; height: 94px;}
+/* a[href|="/cyberboop"]{ background-position: 0px -1410px; width: 200px; height: 94px;} */
+a[href|="/qnwhsk"]{ background-position: 0px -1510px; width: 70px; height: 85px;}
+a[href|="/bjwhiskey"]{ background-position: 0px -1905px; width: 96px; height: 149px;}
 
 
 a[href|="/advicebj"]
@@ -293,7 +295,7 @@ a[href|="/advicebj"]
     overflow: hidden !important;
     position: relative !important;
     text-transform: uppercase !important;
-    background-image: url(%%foe-em3-v21%%) !important;
+    background-image: url(%%foe-em3-v22%%) !important;
 }
 a[href|="/advicebj"]{ background-position: 0px -950px; width: 300px; height: 300px;}
 
@@ -315,6 +317,37 @@ a[href|='/advicebj'] strong{
     left: 50% !important;
     margin-left: -140px !important
     }
+
+
+
+a[href|="/lpsign"]{
+    background-image: url(%%foe-em3-v22%%) !important;
+    background-repeat: no-repeat !important;
+    display: inline-block !important;
+    position: relative !important;
+    width:166px; height:150px;
+    line-height: 24px !important;
+    overflow: hidden !important;
+    cursor: default !important;
+    }
+    
+a[href|="/lpsign"] em{
+    position: absolute !important;
+    top: 50px !important;
+    left: 95% !important;
+    margin-left: -100px !important;
+    width: 93px !important;
+    color: #465A73 !important;
+    text-align: center !important;
+    text-transform: uppercase !important;
+    text-shadow: -1px 0 #394D66,0 1px black,1px 0 #394D66,0 -1px #394D66!important;
+    font-family: "Comic Sans" !important;
+    font-style: normal !important;
+    font-size: 15px !important;
+    }   
+a[href|='/lpsign'] {width:262px; height:300px; background-position: 0px -1600px}
+
+
 
 /* Flair */
 
