--- a/source-css/mlas1animotes.css
+++ b/source-css/mlas1animotes.css
@@ -48,7 +48,7 @@ a[href|='/dashcheer'] { width:350px; height:200px; background-image: url(%%dashc
 a[href|='/twist'] { width:140px; height:200px; background-image: url(%%twist%%); background-position: 0px 0px; display: block; clear: none; float: left; margin-left: 3px; margin-right: 3px}
 
 a[href|='/peanutbutterpinkiepie'], a[href|='/bananapie'] { width:160px; height:160px; background-image: url(%%peanutbutterpinkiepie%%); background-position: 0px 0px; display: block; clear: none; float: left; margin-left: 3px; margin-right: 3px}
-
+a[href|='/derpystomp'] { width:105px; height:128px; background-image: url(%%derpystomp%%); background-position: 0px 0px; display: block; clear: none; float: left}/*hosting this until /r/mylittledawww gets their shit together. */
 
 
 a[href|="/ppbop"], a[href|="/dashbop"], a[href|="/twibob"] {
