Stylesheet/emote/tag updates 2012-11-01

--- a/source-css/mlas1animotes.css
+++ b/source-css/mlas1animotes.css
@@ -50,6 +50,8 @@ a[href|='/twist'] { width:140px; height:200px; background-image: url(%%twist%%);
 a[href|='/peanutbutterpinkiepie'], a[href|='/bananapie'] { width:160px; height:160px; background-image: url(%%peanutbutterpinkiepie%%); background-position: 0px 0px; display: block; clear: none; float: left; margin-left: 3px; margin-right: 3px}
 a[href|='/derpystomp'] { width:105px; height:128px; background-image: url(%%derpystomp%%); background-position: 0px 0px; display: block; clear: none; float: left}/*hosting this until /r/mylittledawww gets their shit together. */
 
+a[href|='/omgomgomg'] { width:150px; height:150px; background-image: url(%%dashomg%%); background-position: 0px 0px; display: block; clear: none; float: left}
+a[href|='/twisax'] { width:151px; height:150px; background-image: url(%%twisax%%); background-position: 0px 0px; display: block; clear: none; float: left}
 
 a[href|="/ppbop"], a[href|="/dashbop"], a[href|="/twibob"] {
     display: block;
