--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -5,8 +5,8 @@
 /* UTC time: http://www.time.gov/timezone.cgi?UTC/s/0 */
 
 /***********************************
-* EDITED BY: Pathogen-David @ 3/30 02:22:10 UTC  *
-* Whoa CMC, you keep editing that CSS ya gonna get a wicked bad tummy ache.  *m
+* EDITED BY: Lulu @ 10/31 06:59:47 UTC  *
+* lolwehaveupdatedthissomanytimessincemarchsonowichangedthedatealsotrixieisbestponykthx  *m
 ***********************************/
 
 /*Rule #1: Do NOT get Fluttershy started on the fauna! */
@@ -152,7 +152,7 @@ div.titlebox .users-online span.number:after
     }
 */
 .sidecontentbox a.author[href$="/IllusionOf_Integrity"]:before {
-    content: "Lyra loves Bon-Bon.";
+    content: "Trixie loves Trixie.";
     font-size: 10pt;
     color: #369;
     display:block;
