--- a/source-css/mylittlelistentothis.css
+++ b/source-css/mylittlelistentothis.css
@@ -1406,14 +1406,14 @@ a[href|="/phei"] {
     height: 92px;
     background-position: 0px 0px !important;
 }
-a[href|="/ppp"], a[href|="/pheispinkieplushie"] {
-background-image: url(%%emotephei%%);
+a[href|="/YOLO"],a[href|="/yolo"] {
+background-image: url(%%kontanyolo%%) !important;
     clear: none;
     display: block;
     float: left;
-    width: 238px;
-    height: 269px;
-    background-position: -92px 0px !important
+    width: 180px;
+    height: 320px;
+    background-position: -0px 0px !important
 }
 /* Other */
 
