--- a/source-css/mylittlenanners.css
+++ b/source-css/mylittlenanners.css
@@ -901,6 +901,14 @@ a[href|="/bspikegnat"] {
     height: 224px;
     background-position: -0px -0px
 }
+a[href|="/yolo"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 208px;
+    background-image: url(%%yolo%%) !important
+}
 
 /*
 * HumaNanners
