--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -200,3 +200,21 @@ body { background: url(%%mafiawin%%) no-repeat fixed bottom center; }
 .res-nightmode .titlebox .usertext-body .md h3 {
 color: white !important;
 }
+
+/* spoiler tags*/
+a[href|="#spoiler"] {
+width: 16px;
+height: 16px;
+display: block;
+font-size: 0px;
+content: "";
+background-color: black
+}
+a[href|="#spoiler"]:focus {
+width: auto;
+height: auto;
+display: inline-block;
+color: white !important;
+font-size: 12px;
+background-color: black
+}
