Stylesheet/emote/tag updates 2012-11-02

--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -185,7 +185,7 @@ display: none !important;
 
 /* Best sidebar Filly */
 
-.side a[href="http://fav.me/d59zmb5"]{
+.side a[href="http://fav.me/d4pw6t9"]{
    display: block;
    height: 120px;
    width: 120px;
