--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -2100,9 +2100,9 @@ h3 {
 
 .side a[href="http://www.reddit.com/r/MLPLounge/new/"]{
    display: block;
-   height: 87px;
-   width: 80px;
-   background: url(%%fillyflitter%%);
+   height: 86px;
+   width: 81px;
+   background: url(%%fillyraindrops%%);
    position: fixed; 
    top: 260px;
    right: -10px;
