--- a/data/extracss-moz.css
+++ b/data/extracss-moz.css
@@ -347,4 +347,28 @@
 .bpflag-rotate, .bpflag-lrotate {-moz-animation:zspin 2s infinite linear;image-rendering:-moz-crisp-edges}
 .bpflag-rrotate, .bpflag-lrrotate {-moz-animation:znips 2s infinite linear;image-rendering:-moz-crisp-edges}
 
+@-moz-keyframes slide{0%{left:0%;-moz-transform:scaleX(1)}46%{left:60%;-moz-transform:scaleX(1)}50%{left:60%;-moz-transform:scaleX(-1)}96%{left:0%;-moz-transform:scaleX(-1)}100%{left:0%;-moz-transform:scaleX(1)}}
+@-moz-keyframes slide-r{0%{left:0%;-moz-transform:scaleX(-1)}46%{left:60%;-moz-transform:scaleX(-1)}50%{left:60%;-moz-transform:scaleX(1)}96%{left:0%;-moz-transform:scaleX(1)}100%{left:0%;-moz-transform:scaleX(-1)}}
+@-moz-keyframes edils{0%{left:60%;-moz-transform:scaleX(-1)}46%{left:0%;-moz-transform:scaleX(-1)}50%{left:0%;-moz-transform:scaleX(1)}96%{left:60%;-moz-transform:scaleX(1)}100%{left:60%;-moz-transform:scaleX(-1)}}
+@-moz-keyframes edils-r{0%{left:60%;-moz-transform:scaleX(1)}46%{left:0%;-moz-transform:scaleX(1)}50%{left:0%;-moz-transform:scaleX(-1)}96%{left:60%;-moz-transform:scaleX(-1)}100%{left:60%;-moz-transform:scaleX(1)}}
+/*== -slide ==*/
+.bpflag-slide{position:relative;-moz-animation:slide 8s infinite ease}
+.bpflag-r.bpflag-slide{position:relative;-moz-animation:slide-r 8s infinite ease}
+/*== -shift ==*/
+.bpflag-shift{position:relative;-moz-animation:slide 8s infinite linear}
+.bpflag-r.bpflag-shift{position:relative;-moz-animation:slide-r 8s infinite linear}
+/*== -edils ==*/
+.bpflag-edils{position:relative;-moz-animation:edils 8s infinite ease}
+.bpflag-r.bpflag-edils{position:relative;-moz-animation:edils-r 8s infinite ease}
+/*== -tfish ==*/
+.bpflag-tfish{position:relative;-moz-animation:edils 8s infinite linear}
+.bpflag-r.bpflag-tfish{position:relative;-moz-animation:edils-r 8s infinite linear}
+/*== time ==*/
+.bpflag-fast{-moz-animation-duration:6s}
+.bpflag-faster{-moz-animation-duration:4s}
+.bpflag-fastest{-moz-animation-duration:2s}
+.bpflag-slow{-moz-animation-duration:10s}
+.bpflag-slower{-moz-animation-duration:12s}
+.bpflag-slowest{-moz-animation-duration:14s}
+
 .md{overflow-y:hidden !important}
